--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx}": [
       "yarn lint --fix",
-      "jest --bail --findRelatedTests",
+      "yarn test CI=true --bail --findRelatedTests",
       "git add"
     ]
   },
