--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node ./node_modules/nm-mock-api/scripts/updateEpg.js && npm run start:mock-api",
     "dev-start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-app-rewired test --env=jest-environment-jsdom-sixteen --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "immer": "7.0.5",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "nm-mock-api": "git+https://github.com/NoriginMedia/mock-api.git#cloudberry",
     "npm": "^6.12.0",
     "polished": "^3.4.1",
@@ -33,9 +35,12 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-i18next": "^11.0.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.1.1",
+    "react-responsive": "^8.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
